plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.cloudBalance'
version = '0.0.1-SNAPSHOT'
description = 'Assigned project'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.+'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
	implementation 'org.springframework.boot:spring-boot-starter-security:4.0.0'
	// https://mvnrepository.com/artifact/org.springframework.session/spring-session-jdbc
	implementation 'org.springframework.session:spring-session-jdbc:4.0.0'
	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly'io.jsonwebtoken:jjwt-jackson:0.12.6'
	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools
	implementation'org.springframework.boot:spring-boot-devtools:4.0.0'
	compileOnly 'org.projectlombok:lombok'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.mysql:mysql-connector-j:8.3.0'
//	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
